Add a compilation excludes file for iv2-wip
 A new file is added, javac-excludes.txt, that lists files
 that will be excluded from compilation on the iv2-wip
 branch.  This way we can have an explicit list of unported
 testcases, and still have working compilation.

--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,7 @@
             srcdir="@{srcdir}"
             destdir="@{destdir}"
             excludes="@{excludes}"
+            excludesfile="javac-excludes.txt"
             encoding='UTF-8'
             debug='true'>
             <classpath refid="project.classpath" />
